// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object component render default 1`] = `""`;

exports[`Object component render with data 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Test
    </span>
    <span
      id="date"
    >
      1 января, чт, 1970 год
    </span>
  </div>
  <div
    className="Order-items"
  />
</div>
`;

exports[`Object component render with data and items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Test
    </span>
    <span
      id="date"
    >
      1 января, чт, 1970 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      1
    </div>
    <div
      className="Order-item"
      key="1"
    >
      2
    </div>
    <div
      className="Order-item"
      key="2"
    >
      3
    </div>
  </div>
</div>
`;

exports[`Object component render with no date 1`] = `""`;

exports[`Object component render with no shop 1`] = `""`;

exports[`Object component render with no shop and data 1`] = `""`;
